feat: add header

--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -7,12 +7,9 @@ $breakpoint-md: 800px + 0.5;
 $breakpoint-sm: 608px + 0.5;
 $breakpoint-xs: 320px + 0.5;
 
-// GUTTERS
-
-$gutter-md: 16px;
-$gutter-sm: 4px;
-
 // COLORS
 
-$white: #fff;
+$white: #F5FBF2;
 $black: #181818;
+
+$mainColor: #00E3A5;
