--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'global/clean-css';
-@import 'global/grid.scss';
 @import 'global/variables';
 @import 'global/fonts';
 @import 'global/common.scss';
+
+@import 'partials/header';
