--- a/src/scss/global/common.scss
+++ b/src/scss/global/common.scss
@@ -1,3 +1,38 @@
 body {
     font-family: 'Gilroy';
 }
+
+.container {
+    max-width: 1330px;
+    width: 100%;
+}
+
+.button {
+    color: $white;
+    font-weight: 800;
+    font-size: 18px;
+
+    background: none;
+    padding: 24px 45px;
+    border: 1px solid $mainColor;
+    border-radius: 5px;
+
+    transition: all .3s ease-in-out;
+
+    &:hover,
+    &:focus {
+        background: $mainColor;
+        color: $black;
+    }
+
+    &_filled {
+        background: $mainColor;
+        color: $black;
+
+        &:hover,
+        &:focus {
+            background: none;
+            color: $white;
+        }
+    }
+}
