--- a/src/scss/partials/header.scss
+++ b/src/scss/partials/header.scss
@@ -3,6 +3,7 @@
     top: 30px;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 10;
     
     display: flex;
     justify-content: center;
