--- a/src/scss/global/common.scss
+++ b/src/scss/global/common.scss
@@ -24,6 +24,10 @@ body {
     &:focus {
         background: $mainColor;
         color: $black;
+
+        -webkit-box-shadow: 0px 10px 17px -1px rgba(0,227,165,0.2);
+        -moz-box-shadow: 0px 10px 17px -1px rgba(0,227,165,0.2);
+        box-shadow: 0px 10px 17px -1px rgba(0,227,165,0.2);
     }
 
     &_filled {
@@ -32,8 +36,33 @@ body {
 
         &:hover,
         &:focus {
-            background: none;
-            color: $white;
+            -webkit-box-shadow: 0px 10px 17px -1px rgba(0,227,165,0.2);
+            -moz-box-shadow: 0px 10px 17px -1px rgba(0,227,165,0.2);
+            box-shadow: 0px 10px 17px -1px rgba(0,227,165,0.2);
         }
     }
+}
+
+p {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 150%;
+    text-align: center;
+
+    color: $white;
+}
+
+h4 {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 150%;
+    text-align: center;
+
+    color: $secondColor;
 }
