--- a/src/scss/sections/home.scss
+++ b/src/scss/sections/home.scss
@@ -32,7 +32,7 @@
             font-size: 28px;
             line-height: 36px;
 
-            color: #80AB9E;
+            color: $secondColor;
             margin-bottom: 16px;
         }
 
