--- a/src/scss/partials/header.scss
+++ b/src/scss/partials/header.scss
@@ -9,7 +9,8 @@
     justify-content: center;
     align-items: center;
 
-    width: 1500px;
+    max-width: 1500px;
+    width: 100%;
     height: 150px;
 
     background: rgba(9, 37, 30, .3);
