--- a/src/scss/sections/achievements.scss
+++ b/src/scss/sections/achievements.scss
@@ -19,7 +19,7 @@
 
         &__item {
             z-index: 5;
-            
+
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -48,5 +48,25 @@
     &__image {
         width: 100%;
         transform: translateY(-5%);
+    }
+
+    .partners {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+
+        max-width: 1500px;
+        width: 100%;
+        height: 260px;
+        padding: 0 130px;
+
+        background: rgba(9, 37, 30, .3);
+        border-radius: 100px;
+
+        svg {
+            opacity: .15;
+            color: $mainColor;
+        }
     }
 }
